plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
}

android {
    compileSdk 32

    defaultConfig {
        applicationId "com.misawabus.project.heartRate"
        minSdk 26
        targetSdk 32
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    buildFeatures{
        dataBinding true
    }
    namespace 'com.misawabus.project.heartRate'

}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.5.1'
    //implementation 'com.google.android.material:material:1.6.1'
    implementation 'com.google.android.material:material:1.7.0-rc01'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation fileTree(dir: '/home/juan/AndroidStudioProjects/HeartRateAPP/app/libs/', include: ['*.aar', '*.jar'], exclude: [])
/*    implementation 'commons-logging:commons-logging:1.2'
    implementation 'org.apache.logging.log4j:log4j:2.17.2'
    implementation 'org.apache.poi:poi:5.2.2'*/
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
    implementation files('libs/gson-2.2.4.jar')
    implementation files('libs/vpbluetooth_1.0.4.jar')
    implementation files('libs/libcomx-0.5.jar')
    implementation files('libs/gson-2.2.4.jar')
    implementation 'org.apache.poi:poi-ooxml:5.2.2'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation 'androidx.compose.ui:ui-graphics:1.2.1'
    implementation fileTree(dir: '/home/juan/AndroidStudioProjects/SmartBand/app/libs/', include: ['*.aar', '*.jar'], exclude: [])


    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'

    implementation 'com.orhanobut:logger:1.15'
    implementation 'com.androidplot:androidplot-core:1.5.10'


    // Room components
    implementation "androidx.room:room-runtime:$rootProject.roomVersion"
    annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
    androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
}